--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   font-family: sans-serif;
+  background-color: white;
+  color: black;
 }
